comecei a escrever conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>            
+            <h1>Cursos grátis</h1>            
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 e CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus corporis dolorum quidem suscipit sint praesentium quas pariatur id quae aut? Delectus itaque vitae eos dolore fuga, quaerat maxime distinctio veniam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus corporis dolorum quidem suscipit sint praesentium quas pariatur id quae aut? Delectus itaque vitae eos dolore fuga, quaerat maxime distinctio veniam.</p>
         </article>
 
     </main>
